2011-08-02  Alexandru Chiculita  <achicu@adobe.com>

        Buildbot: The Properties object has no "hasProperty" method in buildbot 8.3
        https://bugs.webkit.org/show_bug.cgi?id=65554

        Using "has_key" instead of "hasProperty" in order to support buildbot 8.3.

        Reviewed by Adam Roben.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:

2011-08-02  Jochen Eisinger  <jochen@chromium.org>

        Implement WebPermissionClient::allowPlugins for layout tests
        https://bugs.webkit.org/show_bug.cgi?id=33991

        Reviewed by Adam Barth.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        (LayoutTestController::setPluginsAllowed):
        * DumpRenderTree/chromium/LayoutTestController.h:
        * DumpRenderTree/chromium/WebPermissions.cpp:
        (WebPermissions::allowPlugins):
        (WebPermissions::setPluginsAllowed):
        (WebPermissions::reset):
        * DumpRenderTree/chromium/WebPermissions.h:

2011-08-02  Adam Barth  <abarth@webkit.org>

        TestFailures unit tests leak a global variable
        https://bugs.webkit.org/show_bug.cgi?id=65500

        Reviewed by Adam Roben.

        qunit detects the leak if you check the "noglobals" box on run-unittests.html.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/Builder_unittests.js:

2011-08-02  Alexandru Chiculita  <achicu@adobe.com>

        CSS Regions build bot should archive and upload output files
        https://bugs.webkit.org/show_bug.cgi?id=65200

        Until now the buildbots would only upload the result archive if the 'trigger' parameters was specified. The
        upload was needed, because the testbots needed to download and use the archive. For CSS Regions we don't have
        a testbot yet, but we want to save the archive on the server for manual testing. Added new parameter